# sax2

./: .archive  .build  .cards.pl  .doit  .fontpath  .ftp  .id  .locale  .perm  .sax2.dot  .setup  .svnd  .version  Makefile  TODO  init.pl  xc.pl
api/: .make  Makefile  config.h  dialog.cpp  dialog.h  file.cpp  file.h  frame.cpp  frame.h  keyboard.cpp  keyboard.h  message.cpp  message.h  monitor.cpp  monitor.h  mouse.cpp  mouse.h  profile.cpp  profile.h  tablet.cpp  tablet.h  touchscreen.cpp  touchscreen.h  vnc.cpp  vnc.h  wrapper.h  xapi  xapi.cpp  xapi.h  xapi.pro  xapi.sh  xidle.cpp  xidle.h
doc/: Makefile  README  appendix-api.tex  appendix-batch.tex  appendix-options.tex  appendix.tex  bindings.tex  construction.tex  error.tex  (+8 more)
tools/: Makefile.ac  Makefile.am  configure.in
tools/corner/: Makefile.am  corner.c
tools/dots/: Makefile.am  dots.c
tools/getPrimary/: Makefile.am  getPrimary.sh
tools/isax/: Makefile.am  isax.pl
tools/plog/: Makefile.PL.in  Makefile.am  PLog.h  PLog.i  plog.c  plog.pl
tools/vncp/: Makefile.am  vncp.c  vncp.h
tools/whereiam/: Makefile.am  ifaddrs.c  ifaddrs.h  remote.c  remote.h  whereiam.c
tools/whereiam/proc/: devname.c  procps.h  readproc.c  readproc.h  version.c
tools/xidle/: Makefile.am  xidle.c
tools/xkbctrl/: .static  Makefile.am  xkbctrl.pl
tools/xlook/: Makefile.am  xlook.c  xlook.h
tools/xmode/: Makefile.am  main.c  xmode.c  xmode.h
tools/xquery/: Makefile.am  nstring.c  nstring.h  render.c  render.h  xquery.c  xquery.h
tools/xtest/: Makefile.am  xtest.c
tools/xwrapper/: Makefile.am  fashion.c  fashion.h  wmstart  xaccess.c  xaccess.h  ximage  xw.c  xw.h
(+505 files in other folders)
